HelloUltraviolet/Fixtures/RejectedSource/Procedures/ProcedureDeclarationWellFormedness/Expected.uv
//! Expected diagnostic metadata for the ProcedureDeclarationWellFormedness rejected-source specimen.

expectedDiagnostic("E-TYP-1507", "rule.15.WF-ProcedureDecl")
